--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-willteam",
+  "name": "willteam-app",
   "version": "1.0.0",
   "description": "app sport",
   "main": "index.js",
